--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -67,8 +67,35 @@
         style="font-size: 32px; color: red;"
       ></span>
       <p>Built-in Star Icon</p>
-      <p><small>(From @ant-design/icons-angular)</small></p>
     </div>
+  </div>
+
+  <div style="margin-top: 30px; padding: 20px; background-color: #f5f5f5; border-radius: 5px;">
+    <h3>Add New Item</h3>
+    <form [formGroup]="itemForm" (ngSubmit)="onSubmit()" class="add-item-form">
+      <div class="form-group">
+        <label nz-form-item-label>Value:</label>
+        <input nz-input formControlName="value" placeholder="Enter value">
+      </div>
+
+      <div class="form-group">
+        <label nz-form-item-label>Label:</label>
+        <input nz-input formControlName="label" placeholder="Enter label">
+      </div>
+
+      <div class="form-group">
+        <label nz-form-item-label>Icon:</label>
+        <input nz-input formControlName="icon" placeholder="Enter icon name">
+      </div>
+
+      <div class="form-group">
+        <label nz-checkbox formControlName="isLeaf">Is Leaf Node</label>
+      </div>
+
+      <button nz-button nzType="primary" type="submit" [disabled]="!itemForm.valid">
+        Add Item
+      </button>
+    </form>
   </div>
 
   <div style="margin-top: 30px; padding: 20px; background-color: #f5f5f5; border-radius: 5px;">
@@ -77,74 +104,6 @@
 
     <h4>1. Register SVG icon directly as a string</h4>
     <pre style="background-color: #fff; padding: 10px; border-radius: 5px;">
-// In your component
-import {{ '{' }} Component, OnInit {{ '}' }} from '@angular/core';
-import {{ '{' }} NzIconService {{ '}' }} from 'ng-zorro-antd/icon';
-
-@Component({{ '{' }}
-  // component metadata
-{{ '}' }})
-export class YourComponent implements OnInit {{ '{' }}
-  constructor(private iconService: NzIconService) {{ '{' }}{{ '}' }}
-
-  ngOnInit(): void {{ '{' }}
-    this.iconService.addIconLiteral('custom:star', '&lt;svg viewBox="0 0 24 24"&gt;...&lt;/svg&gt;');
-  {{ '}' }}
-{{ '}' }}
-
-// In your template
-&lt;span nz-icon nzType="custom:star"&gt;&lt;/span&gt;
-    </pre>
-
-    <h4>2. Register SVG icon from iconfont</h4>
-    <pre style="background-color: #fff; padding: 10px; border-radius: 5px;">
-// In your component
-import {{ '{' }} Component, OnInit {{ '}' }} from '@angular/core';
-import {{ '{' }} NzIconService {{ '}' }} from 'ng-zorro-antd/icon';
-
-@Component({{ '{' }}
-  // component metadata
-{{ '}' }})
-export class YourComponent implements OnInit {{ '{' }}
-  constructor(private iconService: NzIconService) {{ '{' }}{{ '}' }}
-
-  ngOnInit(): void {{ '{' }}
-    this.iconService.fetchFromIconfont({{ '{' }}
-      scriptUrl: 'https://at.alicdn.com/t/font_8d5l8fzk5b87iudi.js'
-    {{ '}' }});
-  {{ '}' }}
-{{ '}' }}
-
-// In your template
-&lt;span nz-icon nzIconfont="icon-tuichu"&gt;&lt;/span&gt;
-    </pre>
-
-    <h4>3. Register SVG icon from assets folder</h4>
-    <pre style="background-color: #fff; padding: 10px; border-radius: 5px;">
-// In your component
-import {{ '{' }} Component, OnInit {{ '}' }} from '@angular/core';
-import {{ '{' }} NzIconService {{ '}' }} from 'ng-zorro-antd/icon';
-import {{ '{' }} HttpClient {{ '}' }} from '@angular/common/http';
-
-@Component({{ '{' }}
-  // component metadata
-{{ '}' }})
-export class YourComponent implements OnInit {{ '{' }}
-  constructor(
-    private iconService: NzIconService,
-    private http: HttpClient
-  ) {{ '{' }}{{ '}' }}
-
-  ngOnInit(): void {{ '{' }}
-    this.http.get('assets/icons/star.svg', {{ '{' }} responseType: 'text' {{ '}' }})
-      .subscribe((svg) => {{ '{' }}
-        this.iconService.addIconLiteral('asset:star', svg);
-      {{ '}' }});
-  {{ '}' }}
-{{ '}' }}
-
-// In your template
-&lt;span nz-icon nzType="asset:star"&gt;&lt;/span&gt;
     </pre>
   </div>
 </div>
